##################################################################

Special notes for release 0.003:
--------------------------------
The pds_mem() function is now functional.

##################################################################

Special notes for release 0.002:
--------------------------------
None of the catalog/VTOC dslist functions (vol_ser dsname_level) work.

The pds_mem() function is not yet operational.

resetpos() and forward() have been added along with regression tests.

The bug in get_dcb() has been fixed.

The bug in mvswrite() has been fixed.

None of the vsam routines [locate() update() delrec()] have been tested
at all.

##################################################################


Special notes for release 0.001:
--------------------------------

None of the catalog/VTOC functions (vol_ser dsname_level) work

The pds_mem function is not yet operational.

rewind always seems to return undef.

mvswrite can cause trouble, *I do not recommend using it with
valuable data just yet*.

None of the vsam routines (locate update delrec) have been tested
at all.

the dsname key from the return value of get_dcb is not working.

make test fails these for me:

not ok 19
not ok 36
not ok 39
not ok 40
not ok 45
not ok 53

